# learnify-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
core/: permissions.py
learnify/: asgi.py  settings.py  urls.py  wsgi.py
news/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
news/management/commands/: newstojson.py
news/migrations/: 0001_initial.py  0002_historicalnews.py  0003_historicalcategory.py  0004_alter_news_options.py  0005_historicalnews_short_text_news_short_text.py
subjects/: admin.py  apps.py  models.py  serializers.py
subjects/migrations/: 0001_initial.py  0002_alter_subject_name.py
tests/: constants.py
universities/: admin.py  apps.py  constants.py  filters.py  helpers.py  manager.py  models.py  pagination.py  serializers.py  urls.py  views.py
universities/migrations/: 0001_initial.py  0002_university_city.py  0003_university_logo_url_alter_department_code_and_more.py  0004_specialization_subjects.py  0005_university_short_description.py
users/: admin.py  filters.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_about_alter_profile_achievements_and_more.py  0003_historicalprofile.py  0004_alter_profile_user.py
